--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1155,7 +1155,10 @@
                     display: none;
                 }
                 span {
-                    color: #7D7E80;
+                    color: var(--clr-att);
+                    &:hover {
+                        color: var(--clr-att-second);
+                    }
                 }
             }
         }
