--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1155,11 +1155,14 @@
                     display: none;
                 }
                 span {
-                    color: var(--clr-att);
-                    &:hover {
-                        color: var(--clr-att-second);
-                    }
+                    color: #7D7E80;
                 }
+                //span {
+                    //color: var(--clr-att);
+                    //&:hover {
+                        //color: var(--clr-att-second);
+                    //}
+                //}
             }
         }
     }
